--- a/app/src/main/res/layout/activity_add_note.xml
+++ b/app/src/main/res/layout/activity_add_note.xml
@@ -8,23 +8,9 @@
     android:padding="16dp"
     tools:context=".AddEditNoteActivity">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="67dp"
-        android:layout_marginTop="8dp"
-        android:hint="Priority:"
-        android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
-        android:visibility="invisible" />
-
-    <NumberPicker
-        android:id="@+id/number_picker_priority"
-        android:layout_width="wrap_content"
-        android:layout_height="15dp"
-        android:visibility="invisible"></NumberPicker>
-
     <EditText
         android:id="@+id/edit_text_title"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:hint="Subject"
         android:inputType="text" />
@@ -34,12 +20,13 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:hint="Note"
-        android:inputType="textMultiLine" />
+        android:inputType="textMultiLine"
+        android:paddingTop="70dp" />
 
     <Button
         android:id="@+id/saveButton"
-        android:layout_width="68dp"
-        android:layout_height="69dp"
+        android:layout_width="58dp"
+        android:layout_height="59dp"
         android:layout_gravity="right"
         android:background="@drawable/saveicon" />
 
