--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -3,6 +3,12 @@
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <item
+        android:id="@+id/search"
+        android:icon="@drawable/searchicon"
+        android:title=""
+        app:showAsAction="ifRoom"/>
+
+    <item
         android:title="Delete All"
         android:id="@+id/delete_all_notes"
         app:showAsAction="never"/>
