--- a/app/src/main/res/xml/appswidget_info.xml
+++ b/app/src/main/res/xml/appswidget_info.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <appwidget-provider xmlns:android="http://schemas.android.com/apk/res/android"
     android:initialLayout="@layout/new_widget2"
-    android:minHeight="40dp"
+    android:minHeight="50dp"
     android:minWidth="330dp"
-    android:minResizeWidth="110dp"
-    android:minResizeHeight="40dp"
+    android:previewImage="@drawable/znoteround"
+    android:updatePeriodMillis="86400000"
     android:resizeMode="horizontal |vertical"
     android:widgetCategory="home_screen">
 
